--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "npm project for TweetMe web service",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +23,9 @@
   },
   "homepage": "https://github.com/Asafb26/TweetMe#readme",
   "dependencies": {
-    "express": "^4.15.3"
+    "dotenv": "^4.0.0",
+    "express": "^4.15.3",
+    "nconf": "^0.8.4",
+    "winston": "^2.3.1"
   }
 }
