--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "morgan": "^1.8.2",
     "nconf": "^0.8.4",
     "winston": "^2.3.1"
   }
