--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "homepage": "https://github.com/Asafb26/TweetMe#readme",
   "dependencies": {
+    "change-case": "^3.0.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "morgan": "^1.8.2",
     "nconf": "^0.8.4",
+    "require-dir": "^0.3.2",
     "winston": "^2.3.1"
   }
 }
