--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "flickr-sdk": "^2.1.0",
+    "ip-location": "^1.0.1",
     "morgan": "^1.8.2",
     "nconf": "^0.8.4",
     "random-seed": "^0.3.0",
     "require-dir": "^0.3.2",
     "twitter": "^1.7.1",
+    "weather-js": "^2.0.0",
     "winston": "^2.3.1"
   }
 }
