--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "flickr-sdk": "^2.1.0",
+    "google-news-rss": "^0.2.0",
     "ip-location": "^1.0.1",
     "morgan": "^1.8.2",
     "nconf": "^0.8.4",
